variables.Variables.scala.error
Compilation error:
Variables:14: error: not found: value poseBsicuit
poseBsicuit() 
^