variables.Variables.scala.code
var nbPas: Int = 0 
droite()
droite()
while (!estSurBiscuit) {
  avance();
  nbPas = nbPas + 1;
}

prendBiscuit()
var dejaFait: Int = 0
while (dejaFait!=nbPas) {
  recule()
}
poseBsicuit()